--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 
 <body>
-    <div>
+    <div id="root">
 
-        <h1 id="myH1"> {{ Hello }}</h1>
+        <h1> {{ Hello }}</h1>
 
     </div>
 
