--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.7.10/vue.min.js"
         integrity="sha512-H8u5mlZT1FD7MRlnUsODppkKyk+VEiCmncej8yZW1k/wUT90OQon0F9DSf/2Qh+7L/5UHd+xTLrMszjHEZc2BA=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="./js/script.js"></script>
+    <script src="js/script.js" defer></script>
 </head>
 
 <body>
     <div id="root">
 
-        <h1> {{ Hello }}</h1>
+        <h1>{{text}}</h1>
 
     </div>
 
