--- a/index.html
+++ b/index.html
@@ -5,21 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/script.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.7.10/vue.min.js"
         integrity="sha512-H8u5mlZT1FD7MRlnUsODppkKyk+VEiCmncej8yZW1k/wUT90OQon0F9DSf/2Qh+7L/5UHd+xTLrMszjHEZc2BA=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="js/script.js" defer></script>
+    <title>VUE-HELLO</title>
 </head>
 
 <body>
     <div id="root">
-
         <h1>{{text}}</h1>
-
+        <img :src="image" alt="img/01.jpg">
     </div>
-
-
 </body>
 
 </html>
