Aggiungo base per immagini

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <div id="root">
         <h1>{{text}}</h1>
         <img :src="image" alt="img/01.jpg">
+        <img :src="image" alt="img/02.jpg">
+        <img :src="image" alt="img/03.jpg">
+        <img :src="image" alt="img/04.jpg">
+        <img :src="image" alt="img/05.jpg">
+
     </div>
 </body>
 
